Swagger Typescript API (#1503)
