# models/tenant.go
@@ -90,6 +90,9 @@ type Tenant struct {
 	// subnet license
 	SubnetLicense *License `json:"subnet_license,omitempty"`
 
+	// tiers
+	Tiers []*TenantTierElement `json:"tiers"`
+
 	// total size
 	TotalSize int64 `json:"total_size,omitempty"`
 }
@@ -115,6 +118,10 @@ func (m *Tenant) Validate(formats strfmt.Registry) error {
 	}
 
 	if err := m.validateSubnetLicense(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if err := m.validateTiers(formats); err != nil {
 		res = append(res, err)
 	}
 
@@ -226,6 +233,32 @@ func (m *Tenant) validateSubnetLicense(formats strfmt.Registry) error {
 	return nil
 }
 
+func (m *Tenant) validateTiers(formats strfmt.Registry) error {
+	if swag.IsZero(m.Tiers) { // not required
+		return nil
+	}
+
+	for i := 0; i < len(m.Tiers); i++ {
+		if swag.IsZero(m.Tiers[i]) { // not required
+			continue
+		}
+
+		if m.Tiers[i] != nil {
+			if err := m.Tiers[i].Validate(formats); err != nil {
+				if ve, ok := err.(*errors.Validation); ok {
+					return ve.ValidateName("tiers" + "." + strconv.Itoa(i))
+				} else if ce, ok := err.(*errors.CompositeError); ok {
+					return ce.ValidateName("tiers" + "." + strconv.Itoa(i))
+				}
+				return err
+			}
+		}
+
+	}
+
+	return nil
+}
+
 // ContextValidate validate this tenant based on the context it is used
 func (m *Tenant) ContextValidate(ctx context.Context, formats strfmt.Registry) error {
 	var res []error
@@ -247,6 +280,10 @@ func (m *Tenant) ContextValidate(ctx context.Context, formats strfmt.Registry) e
 	}
 
 	if err := m.contextValidateSubnetLicense(ctx, formats); err != nil {
+		res = append(res, err)
+	}
+
+	if err := m.contextValidateTiers(ctx, formats); err != nil {
 		res = append(res, err)
 	}
 
@@ -335,6 +372,26 @@ func (m *Tenant) contextValidateSubnetLicense(ctx context.Context, formats strfm
 			}
 			return err
 		}
+	}
+
+	return nil
+}
+
+func (m *Tenant) contextValidateTiers(ctx context.Context, formats strfmt.Registry) error {
+
+	for i := 0; i < len(m.Tiers); i++ {
+
+		if m.Tiers[i] != nil {
+			if err := m.Tiers[i].ContextValidate(ctx, formats); err != nil {
+				if ve, ok := err.(*errors.Validation); ok {
+					return ve.ValidateName("tiers" + "." + strconv.Itoa(i))
+				} else if ce, ok := err.(*errors.CompositeError); ok {
+					return ce.ValidateName("tiers" + "." + strconv.Itoa(i))
+				}
+				return err
+			}
+		}
+
 	}
 
 	return nil
